コンパイル時にabiを抽出するスクリプトを追加。
npm run compile:abi
で実行できる

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3"
+  },
+  "scripts": {
+    "compile:abi": "npx hardhat compile && node scripts/extractAbi.js"
   }
 }
